--- a/index.html
+++ b/index.html
@@ -22,19 +22,111 @@
   <body>
     <header>
       <div class="container">
-        <ul class="nav">
-          <li class="nav-item"><a href=""></a>Mail</li>
-          <li class="nav-item"><a href=""></a>Images</li>
-          <li class="nav-item">
-            <a href=""></a><img src="./images/popup-button.png" alt="menu" />
-          </li>
-          <li class="nav-item">
-            <a href=""></a><img src="./images/bell.png" alt="notification" />
-          </li>
-          <li class="nav-item">
-            <a href=""></a><img src="./images/194938.png" alt="avatar" />
-          </li>
-        </ul>
+        <div class="wrapper">
+          <ul class="nav">
+            <li class="nav-item"><a href=""></a>Mail</li>
+            <li class="nav-item"><a href=""></a>Images</li>
+            <li class="nav-item">
+              <input type="checkbox" id="burger" />
+              <label for="burger">
+                <img src="./images/popup-button.png" alt="menu" />
+              </label>
+            </li>
+            <li class="nav-item">
+              <a href=""><img src="./images/bell.png" alt="notification" /></a>
+            </li>
+            <li class="nav-item">
+              <a href=""><img src="./images/194938.png" alt="avatar" /></a>
+            </li>
+          </ul>
+
+          <div class="menu">
+            <ul class="menu-list">
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/calendar.png" alt="calendar" /><span
+                    >Calendar</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/mail.png" alt="mail" /><span
+                    >Mail</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/news.png" alt="news" /><span
+                    >News</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/maps.png" alt="map" /><span>Maps</span></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/files.png" alt="files" /><span
+                    >Files</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/contacts.png" alt="contacts" /><span
+                    >Contacts</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/tanslation.png" alt="translations" /><span
+                    >Translate</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/videos.png" alt="videos" />
+                  <span>Video</span>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/search.png" alt="search" /><span
+                    >Search</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/photos.png" alt="photo" /><span
+                    >Photo</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img src="./images/apps.png" alt="apps" /><span
+                    >Photo</span
+                  ></a
+                >
+              </li>
+              <li class="menu-item">
+                <a href=""
+                  ><img
+                    src="./images/documents.png"
+                    alt="documents"
+                  />Documents</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main></main>
