--- a/index.html
+++ b/index.html
@@ -27,11 +27,111 @@
             <li class="nav-item"><a href=""></a>Mail</li>
             <li class="nav-item"><a href=""></a>Images</li>
             <li class="nav-item">
-              <input type="checkbox" id="burger" />
-              <label for="burger">
+              <input type="checkbox" id="popup" />
+              <label for="popup">
                 <img src="./images/popup-button.png" alt="menu" />
               </label>
+              <div class="menu">
+                <ul class="menu-list">
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/calendar.png" alt="calendar" /></a
+                    ><span>Calendar</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/mail.png" alt="mail" /></a
+                    ><span>Mail</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/news.png" alt="news" /></a
+                    ><span>News</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/maps.png" alt="map" /></a
+                    ><span>Maps</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/files.png" alt="files" /></a>
+                    <span>Files</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/contacts.png" alt="contacts" /></a
+                    ><span>Contacts</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img
+                        src="./images/tanslation.png"
+                        alt="translations" /></a
+                    ><span>Translate</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/videos.png" alt="videos" /> </a
+                    ><span>Video</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/search.png" alt="search" /></a
+                    ><span>Search</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/photos.png" alt="photo" /></a
+                    ><span>Photo</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/apps.png" alt="apps" /></a
+                    ><span>Photo</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/documents.png" alt="documents"
+                    /></a>
+                    <span>Documents</span>
+                  </li>
+                </ul>
+
+                <input type="checkbox" id="submenu" class="menu-button" />
+                <label for="submenu" class="button buttonfirst">
+                  <span>More</span>
+                </label>
+
+                <ul class="menu-list submenu-list">
+                  <li class="menu-item">
+                    <a href=""><img src="./images/chat.png" alt="chat" /></a
+                    ><span>Chat</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/classroom.png" alt="classroom" /></a
+                    ><span>classroom</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""
+                      ><img src="./images/collection.png" alt="collection" /></a
+                    ><span>Collection</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/mars.png" alt="mars" /></a
+                    ><span>Mars</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/blogs.png" alt="blogs" /></a
+                    ><span>Blogs</span>
+                  </li>
+                  <li class="menu-item">
+                    <a href=""><img src="./images/promo.png" alt="promo" /></a
+                    ><span>Promos</span>
+                  </li>
+                </ul>
+
+                <input type="checkbox" id="evenmore" />
+                <label for="evenmore" class="button buttonsecond">
+                  <span>Even more</span>
+                </label>
+              </div>
             </li>
+
             <li class="nav-item">
               <a href=""><img src="./images/bell.png" alt="notification" /></a>
             </li>
@@ -39,93 +139,6 @@
               <a href=""><img src="./images/194938.png" alt="avatar" /></a>
             </li>
           </ul>
-
-          <div class="menu">
-            <ul class="menu-list">
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/calendar.png" alt="calendar" /><span
-                    >Calendar</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/mail.png" alt="mail" /><span
-                    >Mail</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/news.png" alt="news" /><span
-                    >News</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/maps.png" alt="map" /><span>Maps</span></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/files.png" alt="files" /><span
-                    >Files</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/contacts.png" alt="contacts" /><span
-                    >Contacts</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/tanslation.png" alt="translations" /><span
-                    >Translate</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/videos.png" alt="videos" />
-                  <span>Video</span>
-                </a>
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/search.png" alt="search" /><span
-                    >Search</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/photos.png" alt="photo" /><span
-                    >Photo</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img src="./images/apps.png" alt="apps" /><span
-                    >Photo</span
-                  ></a
-                >
-              </li>
-              <li class="menu-item">
-                <a href=""
-                  ><img
-                    src="./images/documents.png"
-                    alt="documents"
-                  />Documents</a
-                >
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </header>
