--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 </ul>
 
                 <input type="checkbox" id="submenu" class="menu-button" />
-                <label for="submenu" class="button buttonfirst">
-                  <span>More</span>
+                <label for="submenu" class="buttonfirst">
+                  <span class="button">More</span>
                 </label>
 
                 <ul class="menu-list submenu-list">
@@ -116,8 +116,8 @@
                 </ul>
 
                 <input type="checkbox" id="evenmore" />
-                <label for="evenmore" class="button buttonsecond">
-                  <span>Even more</span>
+                <label for="evenmore" class="buttonsecond">
+                  <span class="button">Even more</span>
                 </label>
               </div>
             </li>
