--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <body>
     <header>
       <div class="container">
-        <nav class="wrapper">
-          <ul class="nav">
-            <li class="nav-item"><a href="#"></a>Mail</li>
-            <li class="nav-item"><a href="#"></a>Images</li>
+        <nav>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#">Mail</a></li>
+            <li class="nav-item"><a href="#">Images</a></li>
             <li class="nav-item">
               <input type="checkbox" id="popup" />
-              <label for="popup">
-                <img src="./images/popup-button.png" />
+              <label for="popup" tabindex="0">
+                <img src="./images/popup-button.png" alt="" />
               </label>
               <div class="menu">
                 <ul class="menu-list">
@@ -84,7 +84,7 @@
                 </ul>
 
                 <input type="checkbox" id="submenu" class="menu-button" />
-                <label for="submenu" class="buttonfirst">
+                <label for="submenu" class="buttonfirst" tabindex="0">
                   <span class="button">More</span>
                 </label>
 
@@ -114,9 +114,8 @@
                     ><span>Promos</span>
                   </li>
                 </ul>
-
                 <input type="checkbox" id="evenmore" />
-                <label for="evenmore" class="buttonsecond">
+                <label for="evenmore" class="buttonsecond" tabindex="0">
                   <span class="button">Even more</span>
                 </label>
               </div>
@@ -126,7 +125,7 @@
               <a href="#"><img src="./images/bell.png" alt="" /></a>
             </li>
             <li class="nav-item">
-              <a href="#"><img src="./images/194938.png" alt="" /></a>
+              <a href="#"> <img src="./images/194938.png" alt="" /></a>
             </li>
           </ul>
         </nav>
