--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First task. Popup</title>
+    <title>First task Popup</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -31,7 +31,7 @@
               <label for="popup" tabindex="0">
                 <img src="./images/popup-button.png" alt="" />
               </label>
-              <div class="menu">
+              <div class="menu top">
                 <ul class="menu-list">
                   <li class="menu-item">
                     <a href="#"><img src="./images/calendar.png" alt="" /></a
