--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   </li>
                   <li class="menu-item">
                     <a href="#"><img src="./images/apps.png" alt="" /></a
-                    ><span>Photo</span>
+                    ><span>Apps</span>
                   </li>
                   <li class="menu-item">
                     <a href="#"><img src="./images/documents.png" alt="" /></a>
