--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
       <div class="container">
         <nav>
           <ul class="nav-list">
-            <li class="nav-item"><a href="#">Mail</a></li>
-            <li class="nav-item"><a href="#">Images</a></li>
             <li class="nav-item">
-              <input type="checkbox" id="popup" />
-              <label for="popup" tabindex="0">
-                <img src="./images/popup-button.png" alt="" />
+              <a class="nav-link" href="#">Mail</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Images</a>
+            </li>
+
+            <li class="nav-item">
+              <input id="popup" type="checkbox" />
+              <label for="popup">
+                <img src="/images/popup-button.png" alt="" />
               </label>
-              <div class="menu top">
+
+              <div class="menu">
                 <ul class="menu-list">
                   <li class="menu-item">
                     <a href="#"><img src="./images/calendar.png" alt="" /></a
@@ -84,7 +90,7 @@
                 </ul>
 
                 <input type="checkbox" id="submenu" class="menu-button" />
-                <label for="submenu" class="buttonfirst" tabindex="0">
+                <label for="submenu" class="buttonfirst">
                   <span class="button">More</span>
                 </label>
 
@@ -115,17 +121,22 @@
                   </li>
                 </ul>
                 <input type="checkbox" id="evenmore" />
-                <label for="evenmore" class="buttonsecond" tabindex="0">
+                <label for="evenmore" class="buttonsecond">
                   <span class="button">Even more</span>
                 </label>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="#"><img src="./images/bell.png" alt="" /></a>
+              <a href="#" class="nav-link">
+                <img class="nav-img" src="./images/bell.png" alt="" />
+              </a>
             </li>
+
             <li class="nav-item">
-              <a href="#"> <img src="./images/194938.png" alt="" /></a>
+              <a href="#" class="nav-link">
+                <img class="nav-img" src="/images/194938.png" />
+              </a>
             </li>
           </ul>
         </nav>
