--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <nav>
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="#">Mail</a>
+              <a href="#">Mail</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Images</a>
+              <a href="#">Images</a>
             </li>
 
             <li class="nav-item">
@@ -128,14 +128,14 @@
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <img class="nav-img" src="./images/bell.png" alt="" />
+              <a href="#">
+                <img src="./images/bell.png" alt="" />
               </a>
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <img class="nav-img" src="/images/194938.png" />
+              <a href="#">
+                <img src="/images/194938.png" />
               </a>
             </li>
           </ul>
