--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="nav-item">
               <input id="popup" type="checkbox" />
               <label for="popup">
-                <img src="/images/popup-button.png" alt="" />
+                <img src="./images/popup-button.png" alt="" />
               </label>
 
               <div class="menu">
@@ -135,7 +135,7 @@
 
             <li class="nav-item">
               <a href="#">
-                <img src="/images/194938.png" />
+                <img src="./images/194938.png" />
               </a>
             </li>
           </ul>
