--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                     ><span>Promos</span>
                   </li>
                 </ul>
-                <input type="checkbox" id="evenmore" />
-                <label for="evenmore" class="buttonsecond">
-                  <span class="button">Even more</span>
-                </label>
+
+                <div class="menu-button buttonsecond">
+                  <a href="#">Even more</a>
+                </div>
               </div>
             </li>
 
